# K-R-excercises

./: CMakeLists.txt  README.md  main.c  main.h
Excercise_2.1/: CMakeLists.txt  Excercise_2.1.c
Excercise_2.2/: CMakeLists.txt  Excercise_2.2.c
Exercise_2.1/: CMakeLists.txt
Exercise_2.10/: CMakeLists.txt  Exercise_2.10.c
Exercise_2.2/: CMakeLists.txt  Exercise_2.2.c
Exercise_2.3/: CMakeLists.txt  Exercise_2.3.c
Exercise_2.4/: CMakeLists.txt  Exercise_2.4.c
Exercise_2.5/: CMakeLists.txt  Exercise_2.5.c
Exercise_2.6/: CMakeLists.txt  Exercise_2.6.c
Exercise_2.7/: CMakeLists.txt  Exercise_2.7.c
Exercise_2.8/: CMakeLists.txt  Exercise_2.8.c
Exercise_2.9/: CMakeLists.txt  Exercise_2.9.c  Exercise_2.9.h
Exercise_3.1/: CMakeLists.txt  Exercise_3.1.c
Exercise_3.2/: CMakeLists.txt  Exercise_3.2.c
Exercise_3.3/: CMakeLists.txt  Exercise_3.3.c
Exercise_3.4/: CMakeLists.txt  Exercise_3.4.c
Exercise_3.5/: CMakeLists.txt  Exercise_3.5.c
Exercise_3.6/: CMakeLists.txt  Exercise_3.6.c
Exercise_4.1/: CMakeLists.txt  Exercise_4.1.c
Exercise_4.10/: CMakeLists.txt  Exercise_4.10.c
Exercise_4.11/: CMakeLists.txt  Exercise_4.11.c
Exercise_4.12/: CMakeLists.txt  Exercise_4.12.c
Exercise_4.13/: CMakeLists.txt  Exercise_4.13.c
Exercise_4.14/: CMakeLists.txt  Exercise_4.14.c
Exercise_4.2/: CMakeLists.txt  Exercise_4.2.c
Exercise_4.3/: CMakeLists.txt  Exercise_4.3.c
Exercise_4.4/: CMakeLists.txt  Exercise_4.4.c
Exercise_4.5/: CMakeLists.txt  Exercise_4.5.c
Exercise_4.6/: CMakeLists.txt  Exercise_4.6.c
Exercise_4.7/: CMakeLists.txt  (+1 more)
(+4 files in other folders)
