cmake_minimum_required(VERSION 3.7)
project(K-R-excercises)

set(CMAKE_C_STANDARD 99)
add_subdirectory(Exercise_2.1)
add_subdirectory(Exercise_2.2)
add_subdirectory(Exercise_2.3)
add_subdirectory(Exercise_2.4)
add_subdirectory(Exercise_2.5)
add_subdirectory(Exercise_2.6)
add_subdirectory(Exercise_2.7)
add_subdirectory(Exercise_2.8)
add_subdirectory(Exercise_2.9)
add_subdirectory(Exercise_2.10)
add_subdirectory(Exercise_3.1)
add_subdirectory(Exercise_3.2)
add_subdirectory(Exercise_3.3)
add_subdirectory(Exercise_3.4)
add_subdirectory(Exercise_3.5)
add_subdirectory(Exercise_3.6)
add_subdirectory(Exercise_4.1)
add_subdirectory(Exercise_4.2)
add_subdirectory(Exercise_4.3)
add_subdirectory(Exercise_4.4)
add_subdirectory(Exercise_4.5)
set(SOURCE_FILES main.c main.h Exercise_2.10/Exercise_2.10.c Exercise_3.1/Exercise_3.1.c Exercise_3.2/Exercise_3.2.c Exercise_3.3/Exercise_3.3.c Exercise_4.1/Exercise_4.1.c Exercise_4.3/Exercise_4.3.c Exercise_4.4/Exercise_4.4.c)

add_executable(main.c ${SOURCE_FILES})